--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://www.img.in.th/images/daa510c76f2af6353707f31c002bb5a0.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;"> แชร์เพื่อน 3 คน รับส่วนลด 30 บาท </br>@mybet.me</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;"> แชร์เพื่อน 3 คน รับส่วนลด 30 บาท </br>@littleclawsmarket</p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แนะนำเพื่อน</button>
           </div>
