--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   async function sendShare() { 
    const result = await liff.shareTargetPicker([{
         "type": "flex",
-        "altText": "(ร้านนี้ของน่ารักมากก)",
+        "altText": "ร้านนี้ของน่ารักมากก",
     "type": "flex",
     "contents": {
   "type": "bubble",
